# blog

./: .gitignore  Cargo.toml  README.md
assets/styles/: output.css
content/posts/: first_post.md  rust_htmx_blog.md  test_post.md
src/: handlers.rs  main.rs  post.rs  router.rs  views.rs
templates/: base.html  blog.html  credits.html  home.html  index.html  notfound.html  post.html
templates/components/: footer.html  navbar.html
