[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.13.0"
axum = "0.8.3"
chrono = { version =  "0.4.40", features = ["serde"] }
pulldown-cmark = "0.13.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
